[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nicolas"
version = "0.1.0"
description = "Python Caching library with tagging support"
readme = "README.rst"
authors = [
  {name = "Yves Thommes", email = "hello@wickeddoc.com"}
]
maintainers = [
  {name = "Yves Thommes", email = "hello@wickeddoc.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "redis",
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/wickeddoc/nicolas-cache/issues"
changelog = "https://github.com/wickeddoc/nicolas-cache/blob/master/changelog.md"
homepage = "https://github.com/wickeddoc/nicolas-cache"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

