[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "nicolas"
dynamic = ["version"]
description = "Python Caching library with tagging support"
readme = "README.rst"
authors = [
  {name = "Yves Thommes", email = "hello@wickeddoc.com"}
]
maintainers = [
  {name = "Yves Thommes", email = "hello@wickeddoc.com"}
]
classifiers = [

]
license = "MIT"
dependencies = [
  "redis",
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff",  # linting
    "setuptools-scm",  # versioning
    "build",  # building
    "twine"  # package checking and uploading
]

[project.urls]

bugs = "https://github.com/wickeddoc/nicolas-cache/issues"
changelog = "https://github.com/wickeddoc/nicolas-cache/blob/master/changelog.md"
homepage = "https://github.com/wickeddoc/nicolas-cache"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.setuptools_scm]
# Use git tags for versioning with CalVer format (YY.MM.DD)
fallback_version = "25.07.16"
version_scheme = "calver-by-date"




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

